--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Exercitando ES6</h1>
+    <script type="module" src="src/scripts/tarefa1/index.js"></script>
   </body>
 </html>
