--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Exercitando ES6</h1>
-    <script type="module" src="src/scripts/tarefa1/index.js"></script>
+    <script type="module" src="src/scripts/tarefa2/index.js"></script>
   </body>
 </html>
