--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Exercitando ES6</h1>
+    <script type="module" src="src/scripts/tarefa1/index.js"></script>
+    <script type="module" src="src/scripts/tarefa2/index.js"></script>
     <script type="module" src="src/scripts/tarefa3/index.js"></script>
   </body>
 </html>
